Hecha la suma de las horas por dia, pero la degracia esa no quiere dar el resultado bien de los dias totales que hay que dar clase :)

--- a/index.html
+++ b/index.html
@@ -51,37 +51,37 @@
                     <div class="form-check">
                         <input class="form-check-input lunCheck" type="checkbox" value="" id="lunCheck">
                         <label class="form-check-label" for="lunCheck">Lunes</label>
-                        <input type="number" class="w-25 dia" id="inputHorasLun" disabled>
+                        <input type="number" class="w-25 dia" id="inputHorasLun" data-index="0" disabled>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input marCheck" type="checkbox" value="" id="marCheck">
                         <label class="form-check-label" for="marCheck">Martes</label>
-                        <input type="number" class="w-25 dia" id="inputHorasMar" disabled>
+                        <input type="number" class="w-25 dia" id="inputHorasMar" data-index="1" disabled>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input mieCheck" type="checkbox" value="" id="mieCheck">
                         <label class="form-check-label" for="mieCheck">Miercoles</label>
-                        <input type="number" class="w-25 dia" id="inputHorasMie" disabled>
+                        <input type="number" class="w-25 dia" id="inputHorasMie" data-index="2" disabled>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input jueCheck" type="checkbox" value="" id="jueCheck">
                         <label class="form-check-label" for="jueCheck">Jueves</label>
-                        <input type="number" class="w-25 dia" id="inputHorasJue" disabled>
+                        <input type="number" class="w-25 dia" id="inputHorasJue" data-index="3" disabled>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input vieCheck" type="checkbox" value="" id="vieCheck">
                         <label class="form-check-label" for="vieCheck">Viernes</label>
-                        <input type="number" class="w-25 dia" id="inputHorasVie" disabled>
+                        <input type="number" class="w-25 dia" id="inputHorasVie" data-index="4" disabled>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input sabCheck" type="checkbox" value="" id="sabCheck">
                         <label class="form-check-label" for="sabCheck">Sabado</label>
-                        <input type="number" class="w-25 dia" id="inputHorasSab" disabled>
+                        <input type="number" class="w-25 dia" id="inputHorasSab" data-index="5" disabled>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input domCheck" type="checkbox" value="" id="domCheck">
                         <label class="form-check-label" for="domCheck">Domingo</label>
-                        <input type="number" class="w-25 dia" id="inputHorasDom" disabled>
+                        <input type="number" class="w-25 dia" id="inputHorasDom" data-index="6" disabled>
                     </div>
                 </form>
             </div>
