Manolo me explico como hacer la cosa esa, este commit es para guardar los cambios

--- a/index.html
+++ b/index.html
@@ -26,10 +26,19 @@
                         <label for="inputHorasDia" class="form-label">Horas por día</label>
                         <input type="number" class="form-control" id="inputHorasDia" value="10">
                     </div>
-                    <div class="mb-3">
-                        <label for="inputFechaInicio" class="form-label">Inicio</label>
-                        <input type="date" class="form-control" id="inputFechaInicio">
+
+
+                    <div class="centrar-fecha row">
+                        <div class="mb-3">
+                            <label for="inputFechaInicio" class="form-label">Inicio</label>
+                            <input type="date" class="form-control" id="inputFechaInicio">
+                        </div>
+                        <div class="mb-3">
+                            <input type="text" class="form-control" id="diaFechaInicio" placeholder="Día de inicio" disabled>
+                        </div>
                     </div>
+
+
                     <div class="disabled-inputs row">
                         <div class="mb-3 col-6">
                             <label for="inputFechaFinal" class="form-label">Final</label>
