--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Datepicker CSS -->
+    <link rel="stylesheet" href="datepicker.material.css">
     <!-- CSS link -->
     <link rel="stylesheet" href="style.css">
     <!-- CDN de Bootstrap -->
@@ -20,11 +22,11 @@
                 <form action="" class="border p-1">
                     <div class="mb-3">
                         <label for="inputTotalHoras" class="form-label">Total Horas</label>
-                        <input type="number" class="form-control" id="inputTotalHoras" value="45">
+                        <input type="number" class="form-control" id="inputTotalHoras" value="200">
                     </div>
                     <div class="mb-3">
                         <label for="inputHorasDia" class="form-label">Horas por día</label>
-                        <input type="number" class="form-control" id="inputHorasDia" value="10">
+                        <input type="number" class="form-control" id="inputHorasDia" value="4.5">
                     </div>
 
 
@@ -60,37 +62,37 @@
                     <div class="form-check">
                         <input class="form-check-input lunCheck" type="checkbox" value="" id="lunCheck">
                         <label class="form-check-label" for="lunCheck">Lunes</label>
-                        <input type="number" class="w-25 dia" id="inputHorasLun" data-index="0" disabled>
+                        <input type="number" class="w-25 dia" id="inputHorasLun" data-index="1" disabled>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input marCheck" type="checkbox" value="" id="marCheck">
                         <label class="form-check-label" for="marCheck">Martes</label>
-                        <input type="number" class="w-25 dia" id="inputHorasMar" data-index="1" disabled>
+                        <input type="number" class="w-25 dia" id="inputHorasMar" data-index="2" disabled>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input mieCheck" type="checkbox" value="" id="mieCheck">
                         <label class="form-check-label" for="mieCheck">Miercoles</label>
-                        <input type="number" class="w-25 dia" id="inputHorasMie" data-index="2" disabled>
+                        <input type="number" class="w-25 dia" id="inputHorasMie" data-index="3" disabled>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input jueCheck" type="checkbox" value="" id="jueCheck">
                         <label class="form-check-label" for="jueCheck">Jueves</label>
-                        <input type="number" class="w-25 dia" id="inputHorasJue" data-index="3" disabled>
+                        <input type="number" class="w-25 dia" id="inputHorasJue" data-index="4" disabled>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input vieCheck" type="checkbox" value="" id="vieCheck">
                         <label class="form-check-label" for="vieCheck">Viernes</label>
-                        <input type="number" class="w-25 dia" id="inputHorasVie" data-index="4" disabled>
+                        <input type="number" class="w-25 dia" id="inputHorasVie" data-index="5" disabled>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input sabCheck" type="checkbox" value="" id="sabCheck">
                         <label class="form-check-label" for="sabCheck">Sabado</label>
-                        <input type="number" class="w-25 dia" id="inputHorasSab" data-index="5" disabled>
+                        <input type="number" class="w-25 dia" id="inputHorasSab" data-index="6" disabled>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input domCheck" type="checkbox" value="" id="domCheck">
                         <label class="form-check-label" for="domCheck">Domingo</label>
-                        <input type="number" class="w-25 dia" id="inputHorasDom" data-index="6" disabled>
+                        <input type="number" class="w-25 dia" id="inputHorasDom" data-index="0" disabled>
                     </div>
                 </form>
             </div>
@@ -103,6 +105,7 @@
                         no puede dar clases -->
                     <input class="form-check-input" type="checkbox" value="" id="excDias">
                     <label class="form-check-label" for="excDias">Excluir días</label>
+                    <input type="text" id="datepicker" class="excluir" autocomplete="off">
                 </div>
                 <div class="botones">
                     <div class="row">
@@ -117,7 +120,7 @@
                         </div>
                     </div>
                     <div class="mb-3 d-flex justify-content-center">
-                        <button type="submit" class="btn btn-primary">Mostrar feriados</button>
+                        <button type="submit" class="btn btn-primary mostrar-feriados">Mostrar feriados</button>
                     </div>
                 </div>
             </div>
@@ -129,6 +132,8 @@
         </div>
     </div>
 
+    <!-- Datepicker JS -->
+    <script src="./datepicker.js"></script>
     <!-- JavaScript Link -->
     <script src="./app.js"></script>
     <!-- CDN de momentjs -->
