Solucionado el bug de cuando se selecciona solo un dia de la semana

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                     <form action="" class="border p-1">
                         <div class="mb-3">
                             <label for="inputTotalHoras" class="form-label">Total Horas</label>
-                            <input type="number" class="form-control" id="inputTotalHoras" value="200">
+                            <input type="number" class="form-control" id="inputTotalHoras" value="">
                         </div>
                         <div class="mb-3">
                             <label for="inputHorasDia" class="form-label">Horas por día</label>
-                            <input type="number" class="form-control" id="inputHorasDia" value="4.5">
+                            <input type="number" class="form-control" id="inputHorasDia" value="">
                         </div>
 
 
@@ -128,8 +128,8 @@
                     </div>
                 </div>
                 <div class="col-lg-6 output-info">
-                    <p id="diasDeClase" class="border mt-3 ms-4 p-1">Ejemplo dias curso</p>
-                    <p id="infoCurso" class="border mt-1 overflow-auto p-1">Ejemplo informacion final del curso</p>
+                    <p id="diasDeClase" class="border mt-3 ms-4 p-1"></p>
+                    <p id="infoCurso" class="border mt-1 overflow-auto p-1"></p>
                 </div>
                 <button type="submit" class="btn btn-primary w-25 m-auto copiar-boton">Copiar</button>
             </div>
