--- a/index.html
+++ b/index.html
@@ -7,160 +7,150 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Datepicker CSS -->
     <link rel="stylesheet" href="datepicker.material.css">
-    <!-- CSS link -->
-    <link rel="stylesheet" href="style.css">
     <!-- CDN de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- CSS link -->
+    <link rel="stylesheet" href="./style.css">
     <title>Control de Fechas para Pedimento Docente</title>
 </head>
 
-<body class="row p-5 bg-primary">
+<body>
+    <Header>
+        <h1 class="title">CALCULO DE CURSOS INFOTEP</h1>
+    </Header>
 
-    <div class="col-8">
-        <div class="container bg-light p-3 rounded-3 m-auto">
-            <div class="row mb-3">
-                <div class="col-lg-6">
-                    <form action="" class="border p-1">
-                        <div class="mb-3">
-                            <label for="inputTotalHoras" class="form-label">Total Horas</label>
-                            <input type="number" class="form-control" id="inputTotalHoras" value="">
-                        </div>
-                        <div class="mb-3">
-                            <label for="inputHorasDia" class="form-label">Horas por día</label>
-                            <input type="number" class="form-control" id="inputHorasDia" value="">
-                        </div>
-
-
-                        <div class="centrar-fecha row">
-                            <div class="mb-3">
-                                <label for="inputFechaInicio" class="form-label">Inicio</label>
-                                <input type="date" class="form-control" id="inputFechaInicio">
-                            </div>
-                            <div class="mb-3">
-                                <input type="text" class="form-control" id="diaFechaInicio" placeholder="Día de inicio"
-                                    disabled>
-                            </div>
-                        </div>
-
-                        <div class="disabled-inputs row">
-                            <div class="mb-3 col-6">
-                                <label for="inputFechaFinal" class="form-label">Final</label>
-                                <input type="text" class="form-control" id="inputFechaFinal" disabled>
-                            </div>
-                            <div class="mb-3 col-6">
-                                <label for="inputDiasLaborar" class="form-label">Dias a laborar</label>
-                                <input type="number" class="form-control" id="inputDiasLaborar" disabled>
-                            </div>
-                        </div>
-                    </form>
+    <main class="wraper">
+        <div class="info-wraper">
+            <h3 class="part">Información del curso</h3>
+            <form action="" class="">
+                <div class="">
+                    <label for="inputTotalHoras" class="form-label">Total Horas</label>
+                    <input type="number" class="form-control" id="inputTotalHoras" value="">
                 </div>
-                <div class="col-lg-6">
-                    <form action="" class="border p-1 seleccionar-dias seleccionar-input-dias">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="lunVieCheck">
-                            <label class="form-check-label" for="lunVieCheck">Lunes/Viernes</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input lunCheck" type="checkbox" value="" id="lunCheck">
-                            <label class="form-check-label" for="lunCheck">Lunes</label>
-                            <input type="number" class="w-25 dia" id="inputHorasLun" data-index="1" disabled>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input marCheck" type="checkbox" value="" id="marCheck">
-                            <label class="form-check-label" for="marCheck">Martes</label>
-                            <input type="number" class="w-25 dia" id="inputHorasMar" data-index="2" disabled>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input mieCheck" type="checkbox" value="" id="mieCheck">
-                            <label class="form-check-label" for="mieCheck">Miercoles</label>
-                            <input type="number" class="w-25 dia" id="inputHorasMie" data-index="3" disabled>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input jueCheck" type="checkbox" value="" id="jueCheck">
-                            <label class="form-check-label" for="jueCheck">Jueves</label>
-                            <input type="number" class="w-25 dia" id="inputHorasJue" data-index="4" disabled>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input vieCheck" type="checkbox" value="" id="vieCheck">
-                            <label class="form-check-label" for="vieCheck">Viernes</label>
-                            <input type="number" class="w-25 dia" id="inputHorasVie" data-index="5" disabled>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input sabCheck" type="checkbox" value="" id="sabCheck">
-                            <label class="form-check-label" for="sabCheck">Sabado</label>
-                            <input type="number" class="w-25 dia" id="inputHorasSab" data-index="6" disabled>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input domCheck" type="checkbox" value="" id="domCheck">
-                            <label class="form-check-label" for="domCheck">Domingo</label>
-                            <input type="number" class="w-25 dia" id="inputHorasDom" data-index="0" disabled>
-                        </div>
-                    </form>
+                <div class="">
+                    <label for="inputHorasDia" class="form-label">Horas por día</label>
+                    <input type="number" class="form-control" id="inputHorasDia" value="">
                 </div>
-            </div>
-            <div class="abajo row">
-                <div class="col-lg-6 elegir-dias">
-                    <div class="form-check">
-                        <!-- cuando esta opción este marcada apareceran un numero 
-                        n de inputs en los cuales el facilitador dira que dias 
-                        no puede dar clases -->
+                <div class="">
+                    <label for="inputFechaInicio" class="form-label">Inicio</label>
+                    <input type="date" class="form-control" id="inputFechaInicio">
+                </div>
+                <div class="">
+                    <label for="diaFechaInicio">Dia de inicio</label>
+                    <input type="email" class="form-control" id="diaFechaInicio" disabled>
+                </div>
+                <div class=" ">
+                    <label for="inputFechaFinal" class="form-label">Final</label>
+                    <input type="email" class="form-control" id="inputFechaFinal" disabled>
+                </div>
+                <div class=" ">
+                    <label for="inputDiasLaborar" class="form-label">Dias a laborar</label>
+                    <input type="number" class="form-control" id="inputDiasLaborar" disabled>
+                </div>
+                <div class="form-check">
+                    <!-- cuando esta opción este marcada apareceran un numero 
+                                n de inputs en los cuales el facilitador dira que dias 
+                                no puede dar clases -->
+                    <div class="excDiv">
                         <input class="form-check-input" type="checkbox" value="" id="excDias">
                         <label class="form-check-label" for="excDias">Excluir días</label>
-                        <input type="text" id="datepicker" class="excluir" autocomplete="off">
                     </div>
-                    <div class="botones">
-                        <div class="row">
-                            <div class="mb-3 col-4">
-                                <button type="submit" class="btn btn-primary" id="procesar">Procesar</button>
-                            </div>
-                            <div class="mb-3  col-4">
-                                <button id="nuevo" type="submit" class="btn btn-primary">Nuevo</button>
-                            </div>
-                            <div class="mb-3 p-0 col-4">
-                                <a href="https://www.google.com"><button type="submit"
-                                        class="btn btn-primary">Salir</button></a>
-                            </div>
-                        </div>
-                        <div class="mb-3 d-flex justify-content-center">
-                            <button type="submit" class="btn btn-primary mostrar-feriados">Mostrar feriados</button>
+                    <br>
+                    <input type="text" id="datepicker" class="excluir excluirInput" autocomplete="off">
+                </div>
+            </form>
+        </div>
+
+        <div class="select-wraper">
+            <h3 class="part">Selección de días</h3>
+            <form action="" class="seleccionar-dias">
+                <div class="form-check check-wraper">
+                    <input class="form-check-input" type="checkbox" value="" id="lunVieCheck">
+                    <label class="form-check-label" for="lunVieCheck">Lunes/Viernes</label>
+                </div>
+                <div class="form-check check-wraper">
+                    <input class="form-check-input lunCheck" type="checkbox" value="" id="lunCheck">
+                    <label class="form-check-label" for="lunCheck">Lunes</label>
+                    <input type="number" class=" dia" id="inputHorasLun" data-index="1" disabled>
+                </div>
+                <div class="form-check check-wraper">
+                    <input class="form-check-input marCheck" type="checkbox" value="" id="marCheck">
+                    <label class="form-check-label" for="marCheck">Martes</label>
+                    <input type="number" class=" dia" id="inputHorasMar" data-index="2" disabled>
+                </div>
+                <div class="form-check check-wraper">
+                    <input class="form-check-input mieCheck" type="checkbox" value="" id="mieCheck">
+                    <label class="form-check-label" for="mieCheck">Miercoles</label>
+                    <input type="number" class=" dia" id="inputHorasMie" data-index="3" disabled>
+                </div>
+                <div class="form-check check-wraper">
+                    <input class="form-check-input jueCheck" type="checkbox" value="" id="jueCheck">
+                    <label class="form-check-label" for="jueCheck">Jueves</label>
+                    <input type="number" class=" dia" id="inputHorasJue" data-index="4" disabled>
+                </div>
+                <div class="form-check check-wraper">
+                    <input class="form-check-input vieCheck" type="checkbox" value="" id="vieCheck">
+                    <label class="form-check-label" for="vieCheck">Viernes</label>
+                    <input type="number" class=" dia" id="inputHorasVie" data-index="5" disabled>
+                </div>
+                <div class="form-check check-wraper">
+                    <input class="form-check-input sabCheck" type="checkbox" value="" id="sabCheck">
+                    <label class="form-check-label" for="sabCheck">Sabado</label>
+                    <input type="number" class=" dia" id="inputHorasSab" data-index="6" disabled>
+                </div>
+                <div class="form-check check-wraper">
+                    <input class="form-check-input domCheck" type="checkbox" value="" id="domCheck">
+                    <label class="form-check-label" for="domCheck">Domingo</label>
+                    <input type="number" class=" dia" id="inputHorasDom" data-index="0" disabled>
+                </div>
+            </form>
+            <div class="btn-wraper">
+                <div class="">
+                    <button type="submit" class="procesar btn" id="procesar">Procesar</button>
+                </div>
+                <div class="center-btns">
+                    <div class="">
+                        <button id="nuevo" type="submit" class="nuevo btn">Nuevo</button>
+                    </div>
+                    <div class="">
+                        <a href="https://www.google.com"><button type="submit" class="salir btn">Salir</button></a>
+                    </div>
+                </div>
+                <div class="">
+                    <button type="submit" class="mostrar-feriados feriados btn">Mostrar feriados</button>
+                </div>
+            </div>
+            
+        </div>
+
+        <div class="date-wraper">
+            <h3 class="part">Fechas</h3>
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button fechas-titulo" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Fechas
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <ol class="list-group list-group-numbered" id="vago">
+
+                            </ol>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 output-info">
-                    <p id="diasDeClase" class="border mt-3 ms-4 p-1"></p>
-                    <p id="infoCurso" class="border mt-1 overflow-auto p-1"></p>
+                <div class="info">
+                    <p id="diasDeClase" class="diasDeClase txt"></p>
+                    <p id="infoCurso" class="infoCurso txt"></p>
                 </div>
-                <button type="submit" class="btn btn-primary w-25 m-auto copiar-boton">Copiar</button>
+                <button type="submit" class="copiar-boton">Copiar</button>
             </div>
         </div>
-    </div>
-
-    <div class="col-4">
-        <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        Fechas
-                    </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-                    data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <ol class="list-group list-group-numbered" id="vago">
-                            
-                        </ol>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-
-    </div>
+    </main>
 
     <!-- Datepicker JS -->
     <script src="./datepicker.js"></script>
