Finalizado el diseño en version movil

--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
                     </div>
                 </div>
                 <div class="info">
-                    <p id="diasDeClase" class="diasDeClase txt"></p>
-                    <p id="infoCurso" class="infoCurso txt"></p>
+                    <p id="diasDeClase" class="diasDeClase txt inactivo"></p>
+                    <p id="infoCurso" class="infoCurso txt inactivo"></p>
                 </div>
-                <button type="submit" class="copiar-boton">Copiar</button>
+                <button type="submit" class="copiar-boton inactivo">Copiar</button>
             </div>
         </div>
     </main>
