Limpié el codigo de css y js y agregué comentarios para hacerlo mas legible

--- a/index.html
+++ b/index.html
@@ -66,45 +66,45 @@
             <h3 class="part">Selección de días</h3>
             <form action="" class="seleccionar-dias">
                 <div class="form-check select-day-wraper check-wraper">
-                    <input class="form-check-input" type="checkbox" value="" id="lunVieCheck">
-                    <label class="form-check-label" for="lunVieCheck">Lunes/Viernes</label>
+                    <input class="form-check-input checkbox" type="checkbox" value="" id="lunVieCheck">
+                    <label class="form-check-label label label" for="lunVieCheck">Lunes/Viernes</label>
                 </div>
                 <div class="tab">
                     <div class="form-check select-day-wraper input-value check-wraper">
-                        <input class="form-check-input lunCheck" type="checkbox" value="" id="lunCheck">
-                        <label class="form-check-label" for="lunCheck">Lunes</label>
+                        <input class="form-check-input checkbox lunCheck" type="checkbox" value="" id="lunCheck">
+                        <label class="form-check-label label label" for="lunCheck">Lunes</label>
                         <input type="number" class=" dia" id="inputHorasLun" data-index="1" disabled>
                     </div>
                     <div class="form-check select-day-wraper input-value check-wraper">
-                        <input class="form-check-input marCheck" type="checkbox" value="" id="marCheck">
-                        <label class="form-check-label" for="marCheck">Martes</label>
+                        <input class="form-check-input checkbox marCheck" type="checkbox" value="" id="marCheck">
+                        <label class="form-check-label label label" for="marCheck">Martes</label>
                         <input type="number" class=" dia" id="inputHorasMar" data-index="2" disabled>
                     </div>
                     <div class="form-check select-day-wraper input-value check-wraper">
-                        <input class="form-check-input mieCheck" type="checkbox" value="" id="mieCheck">
-                        <label class="form-check-label" for="mieCheck">Miercoles</label>
+                        <input class="form-check-input checkbox mieCheck" type="checkbox" value="" id="mieCheck">
+                        <label class="form-check-label label label" for="mieCheck">Miercoles</label>
                         <input type="number" class=" dia" id="inputHorasMie" data-index="3" disabled>
                     </div>
                     <div class="form-check select-day-wraper input-value check-wraper">
-                        <input class="form-check-input jueCheck" type="checkbox" value="" id="jueCheck">
-                        <label class="form-check-label" for="jueCheck">Jueves</label>
+                        <input class="form-check-input checkbox jueCheck" type="checkbox" value="" id="jueCheck">
+                        <label class="form-check-label label label" for="jueCheck">Jueves</label>
                         <input type="number" class=" dia" id="inputHorasJue" data-index="4" disabled>
                     </div>
                     <div class="form-check select-day-wraper input-value check-wraper">
-                        <input class="form-check-input vieCheck" type="checkbox" value="" id="vieCheck">
-                        <label class="form-check-label" for="vieCheck">Viernes</label>
+                        <input class="form-check-input checkbox vieCheck" type="checkbox" value="" id="vieCheck">
+                        <label class="form-check-label label label" for="vieCheck">Viernes</label>
                         <input type="number" class=" dia" id="inputHorasVie" data-index="5" disabled>
                     </div>
                 </div>
                 
                 <div class="form-check select-day-wraper input-value check-wraper">
-                    <input class="form-check-input sabCheck" type="checkbox" value="" id="sabCheck">
-                    <label class="form-check-label" for="sabCheck">Sabado</label>
+                    <input class="form-check-input checkbox sabCheck" type="checkbox" value="" id="sabCheck">
+                    <label class="form-check-label label label" for="sabCheck">Sabado</label>
                     <input type="number" class=" dia" id="inputHorasSab" data-index="6" disabled>
                 </div>
                 <div class="form-check select-day-wraper input-value check-wraper">
-                    <input class="form-check-input domCheck" type="checkbox" value="" id="domCheck">
-                    <label class="form-check-label" for="domCheck">Domingo</label>
+                    <input class="form-check-input checkbox domCheck" type="checkbox" value="" id="domCheck">
+                    <label class="form-check-label label label" for="domCheck">Domingo</label>
                     <input type="number" class=" dia" id="inputHorasDom" data-index="0" disabled>
                 </div>
             </form>
@@ -148,8 +148,8 @@
                 </div>
             </div>
             <div class="info">
-                <p id="diasDeClase" class="diasDeClase txt inactivo"></p>
-                <p id="infoCurso" class="infoCurso txt inactivo"></p>
+                <p id="diasDeClase" class="diasDeClase txt-info inactivo"></p>
+                <p id="infoCurso" class="infoCurso txt-info inactivo"></p>
                 <button type="submit" class="copiar-boton inactivo">Copiar</button>
             </div>
         </div>
