--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Datepicker CSS -->
-    <link rel="stylesheet" href="datepicker.material.css">
+    <link rel="stylesheet" href="./css/datepicker.material.css">
     <!-- CDN de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS link -->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Control de Fechas para Pedimento Docente</title>
 </head>
 
@@ -156,9 +156,9 @@
     </main>
 
     <!-- Datepicker JS -->
-    <script src="./datepicker.js"></script>
+    <script src="./js/datepicker.js"></script>
     <!-- JavaScript Link -->
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
     <!-- CDN de momentjs -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
         integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
