--- a/login/login.html
+++ b/login/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../calculo-horas-clase/css/login.css">
+    <link rel="stylesheet" href="../css/login.css">
     <title>Inicio de sesión</title>
 </head>
 <body>
     <h1 class="title">Inicio de sesión</h1>
     <div class="wraper">
-        <form action="" method="post">
+        <form action="validar.php" method="post">
             <div class="info-wraper">
                 <label for="username">Usuario</label>
                 <input type="text" placeholder="Usuario" id="username" name="usuario">
@@ -19,7 +19,7 @@
                 <label for="password">Contraseña</label>
                 <input type="password" placeholder="Contraseña" id="password" name="contrasena">
             </div>
-            <input type="submit" name="submit" class="btn" value="Iniciar sesion">
+            <input type="submit" class="btn" value="Iniciar sesion">
         </form>
     </div>
 </body>
