--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <form action="" class="">
                 <div class="">
                     <label for="inputTotalHoras" class="form-label">Total Horas</label>
-                    <input type="number" class="form-control input" id="inputTotalHoras" value="">
+                    <input type="number" class="form-control input" id="inputTotalHoras" value="56">
                 </div>
                 <div class="">
                     <label for="inputHorasDia" class="form-label">Horas por día</label>
-                    <input type="number" class="form-control input" id="inputHorasDia" value="">
+                    <input type="number" class="form-control input" id="inputHorasDia" value="2.5">
                 </div>
                 <div class="">
                     <label for="inputFechaInicio" class="form-label">Inicio</label>
@@ -96,7 +96,7 @@
                         <input type="number" class=" dia" id="inputHorasVie" data-index="5" disabled>
                     </div>
                 </div>
-                
+
                 <div class="form-check select-day-wraper input-value check-wraper">
                     <input class="form-check-input checkbox sabCheck" type="checkbox" value="" id="sabCheck">
                     <label class="form-check-label label label" for="sabCheck">Sabado</label>
@@ -124,7 +124,7 @@
                     <button type="submit" class="mostrar-feriados feriados btn">Mostrar feriados</button>
                 </div>
             </div>
-            
+
         </div>
 
         <div class="date-wraper">
@@ -140,8 +140,16 @@
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <ol class="list-group list-group-numbered" id="vago">
-
+                            <ol class="list-group list-group-numbered" id="lista">
+                                <div id="lista-mes">
+                                    <!-- enero
+                                    <li class="list-group-item d-flex justify-content-between align-items-start">
+                                        <div class="ms-2 me-auto">
+                                            10-10-1000
+                                        </div>
+                                        <span class="badge bg-primary rounded-pill horas">25</span>
+                                    </li> -->
+                                </div>
                             </ol>
                         </div>
                     </div>
