--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <form action="" class="">
                 <div class="">
                     <label for="inputTotalHoras" class="form-label">Total Horas</label>
-                    <input type="number" class="form-control input" id="inputTotalHoras" value="56">
+                    <input type="number" class="form-control input" id="inputTotalHoras" value="130">
                 </div>
                 <div class="">
                     <label for="inputHorasDia" class="form-label">Horas por día</label>
-                    <input type="number" class="form-control input" id="inputHorasDia" value="2.5">
+                    <input type="number" class="form-control input" id="inputHorasDia" value="4">
                 </div>
                 <div class="">
                     <label for="inputFechaInicio" class="form-label">Inicio</label>
@@ -142,8 +142,8 @@
                         <div class="accordion-body">
                             <ol class="list-group list-group-numbered" id="lista">
                                 <div id="lista-mes">
-                                    <!-- enero
-                                    <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <!-- enero -->
+                                    <!-- <li class="list-group-item d-flex justify-content-between align-items-start">
                                         <div class="ms-2 me-auto">
                                             10-10-1000
                                         </div>
