--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
                             <ol class="list-group list-group-numbered" id="lista">
                                 <div id="lista-mes">
                                     <!-- enero -->
+                                    <!-- horas -->
                                     <!-- <li class="list-group-item d-flex justify-content-between align-items-start">
                                         <div class="ms-2 me-auto">
                                             10-10-1000
