--- a/index.html
+++ b/index.html
@@ -142,14 +142,46 @@
                         <div class="accordion-body">
                             <ol class="list-group list-group-numbered" id="lista">
                                 <div id="lista-mes">
-                                    <!-- enero -->
-                                    <!-- horas -->
                                     <!-- <li class="list-group-item d-flex justify-content-between align-items-start">
                                         <div class="ms-2 me-auto">
                                             10-10-1000
                                         </div>
                                         <span class="badge bg-primary rounded-pill horas">25</span>
                                     </li> -->
+
+
+
+
+
+
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                                            <button class="accordion-button" id="lista-mes" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
+                                                aria-expanded="true">
+                                                Enero
+                                            </button>
+                                        </h2>
+                                        <div id="panelsStayOpen-collapseOne"
+                                            class="accordion-collapse collapse show laseguetaquecarro"
+                                            aria-labelledby="panelsStayOpen-headingOne">
+                                            <div class="accordion-body">
+                                                Mucho texto
+                                            </div>
+                                        </div>
+                                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
                                 </div>
                             </ol>
                         </div>
