push preventivo parte 2

--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
 
 
 
+
+
+                                    
                                     <div class="accordion-item">
                                         <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                                             <button class="accordion-button" id="lista-mes" type="button"
@@ -163,7 +166,7 @@
                                             </button>
                                         </h2>
                                         <div id="panelsStayOpen-collapseOne"
-                                            class="accordion-collapse collapse show laseguetaquecarro"
+                                            class="accordion-collapse collapse show"
                                             aria-labelledby="panelsStayOpen-headingOne">
                                             <div class="accordion-body">
                                                 Mucho texto
